@@ -1,5 +1,11 @@
 {{$NEXT}}
 
+Fixes:
+* Reading (setting) old feature-value pairs politeness=inf|pol and converting
+  them internally to polite=infm|form.
+
+
+
 3.002     2017-01-16 20:30:08+01:00 Europe/Prague
 
 Features:
